[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/Player_Gunner_art/Mummy_idle_gunner v2.png" type="Texture" id=1]
[ext_resource path="res://art/Player_Gunner_art/Mummy gun.png" type="Texture" id=2]
[ext_resource path="res://art/Player_Gunner_art/Mummy_death gunner v2.png" type="Texture" id=3]
[ext_resource path="res://art/Player_Gunner_art/Mummy_walk_gunner v2.png" type="Texture" id=4]
[ext_resource path="res://Player_Gunner_code/Player_gunner.gd" type="Script" id=5]
[ext_resource path="res://Player_Gunner_code/Idle_player_gunner.gd" type="Script" id=6]
[ext_resource path="res://Player_Gunner_code/Walk_player_gunner.gd" type="Script" id=7]
[ext_resource path="res://Player_Gunner_code/Gun_player_gunner.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36, 84 )

[sub_resource type="Animation" id=1]
resource_name = "Death_player_gunner"
tracks/0/type = "value"
tracks/0/path = NodePath("Death_player_gunner:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_player_gunner"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle_player_gunner:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk_player_gunner"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Walk_player_gunner:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Player_gunner" type="KinematicBody2D"]
position = Vector2( 680, 640 )
script = ExtResource( 5 )
jump = -450

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 4 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death_player_gunner = SubResource( 1 )
anims/Idle_player_gunner = SubResource( 2 )
anims/Walk_player_gunner = SubResource( 3 )

[node name="Idle_player_gunner" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
hframes = 4
region_enabled = true
region_rect = Rect2( 11, 12, 192, 36 )
script = ExtResource( 6 )

[node name="Walk_player_gunner" type="Sprite" parent="."]
visible = false
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
hframes = 6
region_enabled = true
region_rect = Rect2( 10, 11, 288, 37 )
script = ExtResource( 7 )

[node name="Death_player_gunner" type="Sprite" parent="."]
visible = false
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
hframes = 6
region_enabled = true
region_rect = Rect2( 10, 0, 290, 49 )

[node name="Gun_player_gunner" type="Sprite" parent="."]
position = Vector2( 20, -32 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 2 )
offset = Vector2( -6, 7 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="Gun_player_gunner"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gun_player_gunner/Area2D"]
